# ssl-research

./: .pre-commit-config.yaml  README.md  analysis.ipynb  evaluate_runs.py  requirements.txt  run-experiments.sh  setup.cfg  train.py
conf/: config.yaml
ssl_research/: lars.py  ncc.py  vicreg.py
ssl_research/models/: cnn.py
tests/: test_models.py  test_ncc.py  test_vicreg.py
