[metadata]
name = ssl_research
version = 0.1.0
author = Guy Shapira
author_email = guyshapira3@mail.tau.ac.il
description = Understanding the effects of backbone architecture on intermediate NCC accuracy in SSL


[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    torch
    torchvision
    lightning
    omegaconf
    hydra-core
    scikit-learn

[options.extras_require]
dev =
    pytest
    black
    isort
    flake8
    pre-commit

[options.packages.find]
exclude =
    tests*
